@@ -66,8 +66,7 @@ public class LandingResourceTest extends ResourceTest {
         assertEquals(204, response.getStatus());
 
         Headers headers = response.getHeaders();
-        List<String> methods =
-                Arrays.asList(headers.getFirstValue("Allow").split(","));
+        List<String> methods = List.of(headers.getFirstValue("Allow").split(","));
         assertEquals(2, methods.size());
         assertTrue(methods.contains("GET"));
         assertTrue(methods.contains("OPTIONS"));
