@@ -20,7 +20,6 @@ import org.apache.commons.lang3.StringUtils;
 import org.junit.Test;
 
 import java.net.URI;
-import java.util.Arrays;
 import java.util.List;
 
 import static edu.illinois.library.cantaloupe.test.Assert.HTTPAssert.*;
@@ -436,7 +435,8 @@ public class InformationResourceTest extends ResourceTest {
         // Server
         assertNotNull(headers.getFirstValue("Server"));
         // Vary
-        List<String> parts = Arrays.asList(StringUtils.split(headers.getFirstValue("Vary"), ", "));
+        List<String> parts =
+                List.of(StringUtils.split(headers.getFirstValue("Vary"), ", "));
         assertEquals(5, parts.size());
         assertTrue(parts.contains("Accept"));
         assertTrue(parts.contains("Accept-Charset"));
@@ -460,7 +460,7 @@ public class InformationResourceTest extends ResourceTest {
 
         Headers headers = response.getHeaders();
         List<String> methods =
-                Arrays.asList(StringUtils.split(headers.getFirstValue("Allow"), ", "));
+                List.of(StringUtils.split(headers.getFirstValue("Allow"), ", "));
         assertEquals(2, methods.size());
         assertTrue(methods.contains("GET"));
         assertTrue(methods.contains("OPTIONS"));
